# gtkwave

./: EXPANSION_FIX_SUMMARY.md  VERIFICATION_GUIDE.md  meson.build  meson_options.txt  slow_stream_demo.py  test_expansion_streaming.c
.github/workflows/: copilot-setup-steps.yml
contrib/rtlbrowse/: meson.build
docs/: THREAD_SAFE_SNAPSHOTS.md
examples/: slow_stream_demo.py
lib/libgtkwave/src/: gw-fst-file.c  gw-fst-loader.c  gw-ghw-loader.c  gw-hierpack.c  gw-hierpack.h  gw-interactive-loader.c  gw-interactive-loader.h  gw-node-history.c  gw-node-history.h  gw-node.c  gw-node.h  gw-project.c  gw-project.h  gw-shared-memory.c  gw-shared-memory.h  gw-vcd-file-private.h  gw-vcd-file.c  gw-vcd-file.h  gw-vcd-interactive-loader.c  gw-vcd-interactive-loader.h  gw-vcd-loader-private.h  gw-vcd-loader.c  gw-vcd-partial-loader-private.h  gw-vcd-partial-loader.c  gw-vcd-partial-loader.h  gw-vcd-stream-loader.c  gw-vcd-stream-loader.h  gw-vlist-reader.c  gw-vlist-reader.h  gw-vlist-writer.c  gw-vlist-writer.h  gw-vlist.c  gw-vlist.h  meson.build
lib/libgtkwave/test/: dump.c  meson.build  test-custom-vcd-parser.c  test-gw-interactive-loader.c  test-gw-node-expand-crash-repro.c  (+20 more)
scripts/: README.md  awesome.py  combinedscript.py  demo_fixed_workflow.sh  list_accessibles.py  run_with_accessibility.sh  stream_to_gtkwave.py
src/: analyzer.c  analyzer.h  bitvec.c  bsearch.c  bsearch.h  dump_file_main.c  dump_file_main.h  edgebuttons.c  file.c  globals.c  globals.h  gw-mouseover.c  gw-wave-view-traces.c  gw-wave-view.c  hierpack.c  lx2.c  main.c  menu.c  menu.h  meson.build  rc.c  savefile.c  signal_list.c  signalwindow.c  strace.c  symbol.h  tcl_helper.c  tcl_helper.h  tcl_np.h  tcl_support_commands.c  tcl_support_commands.h  treesearch.c  twinwave.c  vcd.h  vcd_partial.c  vcd_partial_adapter.c  vcd_partial_adapter.h  vcd_saver.c  wavewindow.c
(+3 files in other folders)
