option(
    'update_mime_database',
    type: 'boolean',
    value: true,
    description: 'run update-mime-database after install',
)

option(
    'struct_packing',
    type: 'boolean',
    value: false,
    description: 'Enable struct packing',
)

option(
    'judy',
    type: 'feature',
    value: 'auto',
    description: 'Judy support',
)

option(
    'manymarkers',
    type: 'boolean',
    value: false,
    description: 'Increase named marker cound from 26 to 702',
)

option(
    'fasttree',
    type: 'boolean',
    value: true,
    description: 'Enable Fast SST Tree widget code',
)

option(
    'experimental_plugin_support',
    type: 'boolean',
    value: false,
    description: 'Enables experimental plugin support',
)

option(
    'libgtkwave_docs',
    type: 'boolean',
    value: false,
    description: 'Build libgtkwave docs',
)

option(
    'introspection',
    type: 'boolean',
    value: true,
    description: 'Generate GObject introspection data',
)

option(
    'tests',
    type: 'boolean',
    value: true,
    description: 'Build tests',
)

option(
    'set_rpath',
    type: 'feature',
    value: 'auto',
    description: 'Set rpath for executables (automatically enabled if the prefix is not /usr)',
)

option(
    'build_macos_app',
    type: 'boolean',
    value: 'false',
    description: 'Build MacOS application bundle',
)

option(
    'interactive-vcd',
    type: 'boolean',
    value: true,
    description: 'Enable interactive VCD mode support'
)

option(
    'hierpack',
    type: 'boolean',
    value: true,
    description: 'Enable hierarchy compression support'
)

option(
    'shared-memory',
    type: 'boolean',
    value: true,
    description: 'Enable shared memory support for interactive mode'
)
